# network-debugger

./: .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/netdbg-workflow/: SKILL.md
.github/workflows/: ci.yml
docker/: Dockerfile.agent  Dockerfile.server
scripts/: install-hooks.sh  issues.sh  pr.sh
src/netdbg_agent/: config.py  main.py  runner.py  schedule.py  ship_worker.py  shipper.py  spool.py
src/netdbg_agent/collectors/: dns_probe.py  gateway.py  http_probe.py  icmp.py  iface.py
src/netdbg_common/: __init__.py  enums.py  models.py  timeutil.py
src/netdbg_server/: config.py  main.py  seeder.py
src/netdbg_server/api/: auth.py  detect.py  ingest.py  series.py
src/netdbg_server/db/: __init__.py  engine.py  queries.py  schema.sql
src/netdbg_server/detect/: correlate.py  engine.py  hysteresis.py  window.py
src/netdbg_server/detect/rules/: base.py  dns.py  gateway_up_internet_down.py  latency.py  link.py  loss.py  outage.py
src/netdbg_server/web/: index.html
src/netdbg_server/web/static/: app.css  app.js
tests/agent/: test_dns_probe.py  test_gateway.py  test_http_probe.py  test_icmp.py  test_iface.py  test_schedule.py  test_ship_worker.py  test_shipper.py  test_spool.py
tests/api/: test_ingest.py
tests/db/: test_schema.py
tests/detect/: test_correlate.py  test_detect_api.py  test_engine.py  test_hysteresis.py  test_rules.py
tests/fixtures/route/: linux_ip_route_default.json  macos_route_default.txt
tests/integration/: test_chaos_partition.py  test_diagnosis_e2e.py  test_seeder.py
tests/unit/: test_models.py  test_timeutil.py
tests/web/: test_dashboard.py
