[project]
name = "netdbg"
version = "0.1.0"
description = "Distributed home network monitoring and diagnosis"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
agent = [
    "icmplib>=3.0",
    "dnspython>=2.6",
    "httpx>=0.27",
    "psutil>=5.9",
    "pydantic-settings>=2.2",
]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "mypy>=1.9",
    "ruff>=0.4",
    "time-machine>=2.14",
]

[project.scripts]
netdbg-agent = "netdbg_agent.main:main"
netdbg-server = "netdbg_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/netdbg_common", "src/netdbg_agent", "src/netdbg_server"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["icmplib.*", "psutil.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# dnspython ships a py.typed marker but types its exception constructors as untyped
# callables, so constructing them (only in tests) trips no-untyped-call. Nothing to fix
# on our side; disable just that check for the DNS test module.
module = ["tests.agent.test_dns_probe"]
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    # Starlette's TestClient warns that it uses httpx rather than httpx2. Nothing to
    # act on until FastAPI's own testclient migrates; tracked in #23.
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]
